--- a/lab/lab1/index.html
+++ b/lab/lab1/index.html
@@ -15,6 +15,9 @@
   <body>
     <!-- Sidebar -->
     <div class="sidebar">
+      <nav class='navbar1'>
+        <p>shopping navigation</p>
+      </nav>
       <nav class="navbar navbar-default">
         <div class="container-fluid clearfix">
           <div class="topright-button" style="float: right">
