--- a/lab/lab1/index.html
+++ b/lab/lab1/index.html
@@ -38,17 +38,16 @@
               <ul class="dropdown-menu">
                 <li><a href="#">View History</a></li>
                 <li><a href="#">Email All Manufacturers</a></li>
-                <li><a href="#">Something else here</a></li>
               </ul>
             </div>
           </div>
           <div class="navbar-header">
-            <a href="#">Manufacturers</a>
+            <a href="#" >Manufacturers</a>
           </div>
         </div>
       </nav>
       <div class="item">
-        <h2 class="item-heading">Tandy’s Basketweavers</h2>
+        <a href="#" data-toggle="modal" data-target="#myModal"><h2 class="item-heading">Tandy’s Basketweavers</h2></a>
         <div>490 Freedom Drive<br>
         Philadelphia, PA 19425</div>
         <!-- Label -->
@@ -82,6 +81,24 @@
     </div>
     <!-- Map -->
     <div id="map" class="map"></div>
+    <!-- modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Javascript Imports -->
     <script src="js/jquery-2.2.0.js"></script>
     <script src="js/leaflet.js"></script>
