--- a/lab/lab1/index.html
+++ b/lab/lab1/index.html
@@ -17,7 +17,7 @@
     <nav class='navbar1'>
       <!-- icon -->
       <img src="ic_shopping_basket_white_24px.svg" width="50px"
-      position:static alt="shopping basket">
+      position:static alt="shopping basket"></img>
       <!-- menu -->
       <ul class="list-group">
         <li class="list-group-item">Manufacturers</li>
@@ -35,7 +35,7 @@
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" color=#5cb85c>
                 Add New <span class="caret"></span>
               </button>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-right">
                 <li><a href="#" class="text-right">View History</a></li>
                 <li><a href="#" class="text-right">Email All Manufacturers</a></li>
               </ul>
@@ -182,7 +182,7 @@
                           <p>Easter Basket</p>
                         </td>
                       </tr>
-                    </tbody
+                    </tbody>
                   </table>
               </div>
             </div>
